using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Assets.Scripts
{
    class AnimationStrings
    {
        internal static string IsMoving = "isMoving";
        internal static string IsRunning = "isRunning";
        internal static string Jump = "jump";
        internal static string IsGrounded = "isGrounded";
        internal static string IsOnWall = "isOnWall";
        internal static string IsCeiling = "isOnCeiling";
        internal static string Attack = "attack";
        internal static string HasTarget = "hasTarget";
        internal static string IsAlive = "isAlive";
        internal static string yVelocity = "yVelocity";
        internal static string CanMove = "canMove";
        internal static string isHit = "isHit";
    }
}
